[tool.poetry]
name = "twitchup"
version = "0.1.0"
description = "Update a subreddit's sidebar when Twitch streams go live."
authors = [
    "Johannes Christ <johannes.christ@gmail.com>"
]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.6"
praw = "^5.4"
requests = "^2.18"

[tool.poetry.dev-dependencies]
